--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -53,4 +53,23 @@ echo "<img style=\"border: 1px solid black; margin: 0px 2px;\" src=\"images/" . 
 ?>
 }}}
 
+Here's the necessary css style code for shifter to work:
+
+{{{
+#wrapper {
+  width: 306px; /* Main container width. Set it to your preferences. */
+  overflow: hidden; 
+  position: relative;
+}
+
+#container {
+  width: 10000px; /* Hidden container withd. Should be more than 5 * #wrapper width. Most of the time no need to change. */
+}
+
+.frame {
+  float: left;
+  width: 306px; /* Should be the same as the #wrapper width */
+}
+
+
 You can find all of this code in demo files, which are provided with the package. If you have trouble figuring out how to use, please post your detailed problem in the [http://groups.google.com/group/ajax-based-content-shifter-discussions discussion groups]
